# guic

./: .gitignore  CMakeLists.txt  README.md  gui.sln
.cache/clangd/index/: SDL.c.FF18A9BC069EAE74.idx  SDL.h.36BFC24B77D16E0D.idx  SDL.h.51CFB86173CE5630.idx  SDL_RLEaccel.c.048B599AD8BB6C30.idx  SDL_RLEaccel_c.h.8EF80F6E6D868DF7.idx  SDL_alsa_audio.c.36F0996F309E50E4.idx  SDL_alsa_audio.h.A469CFA6C09D951A.idx  SDL_appid.c.6770CBE6909AE046.idx  SDL_appid.h.C5C664B8B1C56D65.idx  SDL_assert.c.2F4DF0C09E99194A.idx  SDL_assert.h.2B4137FA642FD1AF.idx  SDL_assert.h.48AFC36194228237.idx  SDL_assert_c.h.7A5B761BDD43C5D9.idx  SDL_asyncio.c.5F5B8319063593CA.idx  SDL_asyncio.h.F8C88FCE46FF4156.idx  SDL_asyncio_c.h.8ACE3912198CB2DB.idx  SDL_asyncio_generic.c.90F3701FA104CEC2.idx  SDL_asyncio_liburing.c.097E8EE933A898EC.idx  SDL_atomic.c.8DDA692EC3A67869.idx  SDL_atomic.h.59D93FB32C2799EB.idx  SDL_atomic.h.B7771A77B15D4C21.idx  SDL_audio.c.09B47A04FD5FF96D.idx  SDL_audio.h.790C27A9EB4DA819.idx  SDL_audio.h.BF1132C89B1B3B62.idx  SDL_audio_c.h.02CB3C920E1C40A1.idx  SDL_audio_channel_converters.h.67059E1878709AB6.idx  SDL_audiocvt.c.ACA967952DF16DA4.idx  SDL_audiodev.c.7C62212F54293671.idx  (+683 more)
gui/: gui.vcxproj  gui.vcxproj.filters
gui/include/: gui.c  gui.h  gui_element.c  gui_element.h  gui_font.c  gui_font.h  gui_primatives.c  gui_primatives.h  gui_util.h
gui/src/: gui.c  gui_element.c  main.c
include/: gui.h  gui_element.h  gui_font.h  gui_primatives.h  gui_util.h
src/: CMakeLists.txt  gui.c  gui_element.c  gui_font.c  gui_primatives.c  gui_util.c  main.c
(+29 files in other folders)
